--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -7,6 +7,6 @@ file(GLOB_RECURSE SRCS *.cpp)
 include_directories(${CMAKE_SOURCE_DIR})
 
 
-add_executable(frontend_libOTe  ${SRCS})
+add_executable(frontend  ${SRCS})
 
-target_link_libraries(frontend_libOTe libOTe_Tests tests_cryptoTools)
+target_link_libraries(frontend libOTe cryptoTools)
