--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -2,7 +2,7 @@
 #project(libOTe_Tests)
 
 file(GLOB_RECURSE SRCS *.cpp)
-add_library(libOTe_Tests STATIC ${SRCS})
+add_library(Tests STATIC ${SRCS})
 
-target_include_directories(libOTe_Tests PUBLIC ${CMAKE_SOURCE_DIR}) 
-target_link_libraries(libOTe_Tests libOTe)
+target_include_directories(Tests PUBLIC ${CMAKE_SOURCE_DIR}) 
+target_link_libraries(Tests libOTe cryptoTools)
