--- a/Tests/Tests.vcxproj.vcxproj
+++ b/Tests/Tests.vcxproj.vcxproj
@@ -14,7 +14,7 @@
     <ProjectGuid>{294C00B6-949E-4A45-AFA8-45D53590FC11}</ProjectGuid>
     <RootNamespace>libOTe_Tests</RootNamespace>
     <ProjectName>Tests</ProjectName>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -48,9 +48,9 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)../libOTe;$(ProjectDir)../libOTe/cryptoTools/;$(ProjectDir)../libOTe/cryptoTools/thirdparty\win\boost\;$(ProjectDir)../libOTe/cryptoTools/thirdparty\win\;$(ProjectDir)../libOTe/cryptoTools/thirdparty/win/miracl;C:/libs/boost;C:/libs/;C:/libs/miracl</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..;$(ProjectDir)../libOTe/libOTe/;$(ProjectDir)../libOTe/cryptoTools/;$(ProjectDir)../libOTe/cryptoTools/cryptoTools;$(ProjectDir)../libOTe/cryptoTools/thirdparty\win\boost\;$(ProjectDir)../libOTe/cryptoTools/thirdparty\win\;$(ProjectDir)../libOTe/cryptoTools/thirdparty/win/miracl;C:/libs/boost;C:/libs/;C:/libs/miracl</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <PreprocessorDefinitions>SOLUTION_DIR=R"**($(SolutionDir))**";_WIN32_WINNT=0x0501;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SOLUTION_DIR=R"**($(SolutionDir))**";_WIN32_WINNT=0x0501;_MBCS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <EnableParallelCodeGeneration>true</EnableParallelCodeGeneration>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <MinimalRebuild>false</MinimalRebuild>
@@ -75,31 +75,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AknOt_Tests.cpp" />
-    <ClCompile Include="BaseOT_Tests.cpp" />
     <ClCompile Include="Common.cpp" />
-    <ClCompile Include="NcoOT_Tests.cpp" />
-    <ClCompile Include="nOPRF_Tests.cpp" />
-    <ClCompile Include="OTOracleReceiver.cpp" />
-    <ClCompile Include="OTOracleSender.cpp" />
-    <ClCompile Include="OT_Tests.cpp" />
-    <ClCompile Include="UnitTests.cpp" />
+    <ClCompile Include="Tests.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AknOt_Tests.h" />
-    <ClInclude Include="BaseOT_Tests.h" />
     <ClInclude Include="Common.h" />
-    <ClInclude Include="NcoOT_Tests.h" />
-    <ClInclude Include="nOPRF_Tests.h" />
-    <ClInclude Include="OTOracleReceiver.h" />
-    <ClInclude Include="OTOracleSender.h" />
-    <ClInclude Include="OT_Tests.h" />
-    <ClInclude Include="testData\code1280_BCH511.h" />
-    <ClInclude Include="testData\code128_BCH511.h" />
-    <ClInclude Include="testData\code256_BCH511.h" />
-    <ClInclude Include="testData\code384_BCH511.h" />
-    <ClInclude Include="testData\code640_BCH511.h" />
-    <ClInclude Include="UnitTests.h" />
+    <ClInclude Include="Tests.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
