--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -5,4 +5,4 @@ file(GLOB_RECURSE SRCS *.cpp)
 add_library(Tests STATIC ${SRCS})
 
 target_include_directories(Tests PUBLIC ${CMAKE_SOURCE_DIR}) 
-target_link_libraries(Tests libOTe cryptoTools)
+target_link_libraries(Tests ivory libOTe cryptoTools)
