--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ if("${CMAKE_CURRENT_SOURCE_DIR}" STREQUAL "${CMAKE_SOURCE_DIR}")
 	#           Flag and #defines              #
 	############################################
 	add_definitions(-DSOLUTION_DIR=\"${CMAKE_SOURCE_DIR}\")
-	set(CMAKE_C_FLAGS "-ffunction-sections -Wall  -maes -msse2 -msse4.1 -mpclmul -Wfatal-errors -pthread -Wno-strict-overflow  -fPIC -Wno-ignored-attributes")
+	set(CMAKE_C_FLAGS "-ffunction-sections -Wall  -maes -msse2 -msse4.1 -mavx2 -mpclmul -Wfatal-errors -pthread -Wno-strict-overflow  -fPIC -Wno-ignored-attributes")
 	set(CMAKE_CXX_FLAGS  "${CMAKE_C_FLAGS}  -std=c++14")
 	
 	# Select flags.
@@ -66,14 +66,14 @@ set(NTL_Dirs "${CMAKE_SOURCE_DIR}/Ivory-Runtime/thirdparty/linux/ntl/")
 #    Build cryptoTools (common utilities)   #
 #############################################
 #include_directories(cryptoTools)
-add_subdirectory(libOTe/cryptoTools)
+# add_subdirectory(libOTe/cryptoTools)
 
 
 #############################################
 #               Build libOTe                #
 #############################################
 include_directories(libOTe)
-add_subdirectory(libOTe/libOTe)
+add_subdirectory(libOTe)
 
 #############################################
 #               Build ivory                #
